--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-responsive": "^8.0.8",
+    "@types/styled-components": "^5.1.34",
     "aos": "^2.3.4",
     "chart.js": "^4.4.3",
     "react": "^18.3.1",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.77.6",
+    "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
